--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "webpackTests",
+  "homepage": "https://Bowske.github.io/webpackTests",
   "version": "1.0.0",
   "description": "",
   "private": "true",
@@ -13,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "@jamesives/github-pages-deploy-action": "^4.3.3",
     "lodash": "^4.17.21"
   }
 }
