--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,6 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          branch: main # The branch the action should deploy to.
+          branch: gh-pages # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
+          ssh-key: ${{ secrets.SIEMANO }}
